objects/avoka__Transact_Prefill_Generator__c.object
<CustomObject>
    <description>Provides configuration for a prefill service to generate XML prefill data for a new form.</description>
    <fields>
        <fullName>avoka__Generator_Config__c</fullName>
        <description>Configuration details for the prefill generator. Format of the config is determined by the Generator Class that uses it - typically JSON.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configuration details for the prefill generator. Format of the config is determined by the Generator Class that uses it - typically JSON.</inlineHelpText>
        <label>Generator Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Prefill_Generator_Class__c</fullName>
        <defaultValue>&quot;TransactPrefillGenerator&quot;</defaultValue>
        <description>The APEX Class Name to use for prefill generation for the specified form code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The APEX Class Name to use for prefill generation for the specified form code.</inlineHelpText>
        <label>Prefill Generator Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Sample_Prefill_SObject_Id__c</fullName>
        <description>Enter the Id of a object to generate the sample prefill data from.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the Id of a object to generate the sample prefill data from.</inlineHelpText>
        <label>Sample Prefill SObject Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Sample_Prefill_Xml__c</fullName>
        <description>The results of the sample prefill generation will be shown here.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The results of the sample prefill generation will be shown here.</inlineHelpText>
        <label>Sample Prefill Xml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Prefill Generator</label>
    <listViews>
        <fullName>avoka__All</fullName>
        <columns>NAME</columns>
        <columns>avoka__Prefill_Generator_Class__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prefill Generation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>